@@ -14,6 +14,8 @@ For a complete change history, see the SVN log.
 Mapnik 2.1.0
 ------------
 
+- Removed PointDatasource - use more robust MemoryDatasource instead (#1032)
+
 - SQLite - Added support for !intersects! token in sql subselects (#809) allow custom positioning of rtree spatial filter.
 
 - New CSV plugin - reads tabular files - autodetecting geo columns, newlines, and delimiters. Uses in-memory featureset for fast rendering and is not designed for large files (#902)
